force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Case_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact_Method__c</fullName>
    <formula>TEXT(Case_ID__r.Contact_method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Contact Method</label>
    <type>Text</type>
</CustomField>