force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>GetFeedback Survey Responses</relationshipLabel>
    <relationshipName>GetFeedback_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>