force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Case_Last_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Last_Status__c</fullName>
    <formula>Case_ID__r.Last_Case_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Last Status</label>
    <type>Text</type>
</CustomField>