force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <formula>TEXT(Case_ID__r.Origin)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Origin</label>
    <type>Text</type>
</CustomField>