force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <formula>Case_ID__r.Owner:User.Alias</formula>
    <label>Case Owner</label>
    <type>Text</type>
</CustomField>