force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Case_Priority__c.field-meta.xml
<CustomField>
    <fullName>Case_Priority__c</fullName>
    <formula>text(Case_ID__r.Priority)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Priority</label>
    <type>Text</type>
</CustomField>