force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Case_Product_Area__c.field-meta.xml
<CustomField>
    <fullName>Case_Product_Area__c</fullName>
    <formula>TEXT(Case_ID__r.Product_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Product Area</label>
    <type>Text</type>
</CustomField>