force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Case_Software_Version__c.field-meta.xml
<CustomField>
    <fullName>Case_Software_Version__c</fullName>
    <formula>TEXT(Case_ID__r.Software_Version__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Software Version</label>
    <type>Text</type>
</CustomField>