force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Case_Subject__c.field-meta.xml
<CustomField>
    <fullName>Case_Subject__c</fullName>
    <formula>Case_ID__r.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Subject</label>
    <type>Text</type>
</CustomField>