force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Contact_ID__r.Full_Name__c</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>