force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <formula>TEXT(Case_ID__r.CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creation Date</label>
    <type>Text</type>
</CustomField>