force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/CSAT_Score__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Score__c</fullName>
    <formula>IF(ISPICKVAL(CSAT__c, &quot;Very Dissatisfied&quot;), 1,IF(ISPICKVAL(CSAT__c, &quot;Somewhat Dissatisfied&quot;),2,IF(ISPICKVAL(CSAT__c, &quot;Neither Satisfied nor Dissatisfied&quot;),3,IF(ISPICKVAL(CSAT__c, &quot;Somewhat Satisfied&quot;),4,IF(ISPICKVAL(CSAT__c, &quot;Very Satisfied&quot;),5,0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>