force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Ignore_from_NPS__c.field-meta.xml
<CustomField>
    <fullName>Ignore_from_NPS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ignore this survey from the NPS survey statistics</description>
    <inlineHelpText>Ignore this survey from the NPS survey statistics</inlineHelpText>
    <label>Ignore from NPS</label>
    <type>Checkbox</type>
</CustomField>