force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <description>Justification for ignoring from NPS</description>
    <inlineHelpText>Justification for ignoring from NPS</inlineHelpText>
    <label>Justification</label>
    <type>TextArea</type>
</CustomField>