force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Owner_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_First_Name__c</fullName>
    <formula>Case_ID__r.Owner:User.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner First Name</label>
    <type>Text</type>
</CustomField>