force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Owner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Last_Name__c</fullName>
    <formula>Case_ID__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Last Name</label>
    <type>Text</type>
</CustomField>