force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/promoter_score__c.field-meta.xml
<CustomField>
    <fullName>promoter_score__c</fullName>
    <formula>IF(NPS__c &gt; 8, 1,(IF(NPS__c &lt; 7, -1,(IF(AND(NPS__c &gt; 6, NPS__c &lt; 9), 0,0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>