force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Resolution_Code__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Code__c</fullName>
    <formula>TEXT(Case_ID__r.Resolution__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolution Code</label>
    <type>Text</type>
</CustomField>