force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/survey_comments__c.field-meta.xml
<CustomField>
    <fullName>survey_comments__c</fullName>
    <label>survey_comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>