force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Survey_Owner__c.field-meta.xml
<CustomField>
    <fullName>Survey_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CS21-1452: Case Survey Feedback Owner Reassignment</description>
    <label>Survey Owner</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>User.CommunityNickname</field>
            <operation>equals</operation>
            <value>CodeJunkUser</value>
        </filterItems>
        <filterItems>
            <field>User.Profile_Name__c</field>
            <operation>equals</operation>
            <value>Rubrik Customer Support Manager</value>
        </filterItems>
        <filterItems>
            <field>User.Profile_Name__c</field>
            <operation>equals</operation>
            <value>Rubrik Customer Support User</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>GetFeedback_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>