force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Survey_Reason__c.field-meta.xml
<CustomField>
    <fullName>Survey_Reason__c</fullName>
    <description>CS21-2416 This field defines the survey owner of which type of code user.</description>
    <label>Survey Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Incorrect or duplicate submission</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Overall support experience</fullName>
            </value>
            <value>
                <fullName>Product defect</fullName>
            </value>
            <value>
                <fullName>Product feature or functionality</fullName>
            </value>
            <value>
                <fullName>Third party issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>