force-app/main/default/objects/GetFeedback_Survey_Response__c/validationRules/Empty_Survey_Reason_For_Non_Code_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Empty_Survey_Reason_For_Non_Code_User</fullName>
    <active>true</active>
    <description>This validation rule works when user select the Survey Owner other than Code and also select the survey reason picklist value.</description>
    <errorConditionFormula>AND(
  Survey_Owner__r.CommunityNickname != &quot;CodeJunkUser&quot;,
  NOT(ISBLANK(TEXT(Survey_Reason__c)))
)</errorConditionFormula>
    <errorDisplayField>Survey_Reason__c</errorDisplayField>
    <errorMessage>Survey reason can only be filled when the Survey Owner is Code.</errorMessage>
</ValidationRule>