force-app/main/default/objects/GetFeedback_Survey_Response__c/validationRules/Mandatory_Survey_Reason_For_User_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Survey_Reason_For_User_Code</fullName>
    <active>true</active>
    <description>This validation rule works when the user name is Code and the Survey reason field is left empty.</description>
    <errorConditionFormula>AND(
    Survey_Owner__r.CommunityNickname = &quot;CodeJunkUser&quot;,
    ISPICKVAL(Survey_Reason__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Survey_Reason__c</errorDisplayField>
    <errorMessage>This field is mandatory.</errorMessage>
</ValidationRule>