force-app/main/default/objects/GetFeedback_Survey_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Creation_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Case_ID__c</columns>
    <columns>Case_Owner__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>CSAT__c</columns>
    <columns>NPS__c</columns>
    <columns>survey_comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>